--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "simpliest and no deps web framework ever.",
   "main": "index.js",
   "scripts": {
-    "test": "no test"
+    "test": "no test",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
