--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/swoopertr/framer-web-framework/issues"
   },
-  "homepage": "https://github.com/swoopertr/framer-web-framework#readme",
+  "homepage": "https://github.com/swoopertr/framer-web-framework#readme"
 }
