--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "debug": "node --nolazy --inspect-brk -a=9229 index.js"
+    "debug": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,10 @@
   "license": "ISC",
   "dependencies": {
     "@medley/router": "^0.2.1",
-    "formidable": "^2.0.1"
+    "aws-sdk": "^2.326.0",
+    "formidable": "^2.0.1",
+    "jszip": "^3.10.1",
+    "shelljs": "^0.8.5"
   },
   "bugs": {
     "url": "https://github.com/swoopertr/framer-web-framework/issues"
