--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "debug": "node test.js",
     "build_image": "docker build --pull --rm -f \"dockerfile\" -t web:latest \".\"",
-    "run_image": "docker run -d -p 8081:8081 web:latest"
+    "run_image": "docker run -d -p 8081:8081 web:latest",
+    "format" : "npx prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -31,5 +32,8 @@
   "bugs": {
     "url": "https://github.com/swoopertr/framer-web-framework/issues"
   },
-  "homepage": "https://github.com/swoopertr/framer-web-framework#readme"
+  "homepage": "https://github.com/swoopertr/framer-web-framework#readme",
+  "devDependencies": {
+    "prettier": "3.3.3"
+  }
 }
