--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "debug": "node test.js",
-    "build_image": "docker build --pull --rm -f \"dockerfile\" -t web:latest \".\"",
+    "build_image": "docker build --no-cache --pull --rm -f \"Dockerfile\" -t web:latest \".\"",
     "run_image": "docker run -d -p 8081:8081 web:latest"
   },
   "repository": {
